# spot

./: .gitignore  Cargo.toml  Trunk.toml  readme.md
src/: lib.rs  main.rs  spot_web.rs  spots.rs  svg_builder.rs
src/app/: index.html  mod.rs  spot_app.rs
static/templates/: index.html
