[package]
name = "spot"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "spot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.10.0"
palette = {version = "0.6.0", features = ["random"]}
rand = "0.8.4"
actix-web = "3.3.2"
handlebars = {version = "4.1.3", features = ["dir_source"]}
serde_json = "1.0.68"
actix-http = "2.2.1"
serde = "1.0.130"
